--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -7,9 +7,15 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependency directories
 node_modules
+
+# Build output
 dist
 dist-ssr
+.next
+
+# Local environment overrides
 *.local
 
 # Editor directories and files
